--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "description": "",
   "dependencies": {
     "express": "^5.1.0",
-    "spatialite": "^0.1.0",
-    "sqlite3": "^5.1.7",
-    "wkx": "^0.5.0"
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7"
   }
 }
